--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^16.1.0",
-    "@types/jest": "^29.5.14"
+    "@types/jest": "^29.5.14",
+    "@types/react": "^19.0.2"
   }
 }
